implement swagger codegen
