# src/main/java/com/vape/sso/controller/SessionController.java
@@ -1,46 +1,68 @@
 package com.vape.sso.controller;
 
 import com.vape.sso.service.SessionService;
-import com.vape.sso.swagger.model.SessionRequest;
-import com.vape.sso.swagger.model.SessionResponse;
-import com.vape.sso.swagger.model.SessionState;
-import com.vape.sso.swagger.model.SessionStatus;
+import com.vape.sso.swagger.v1.api.SessionApi;
+import com.vape.sso.swagger.v1.model.SessionRequest;
+import com.vape.sso.swagger.v1.model.SessionResponse;
+import com.vape.sso.swagger.v1.model.SessionState;
+import com.vape.sso.type.SessionStatus;
+import io.swagger.annotations.ApiParam;
+import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
+import javax.validation.constraints.NotNull;
 
 @RestController
-@RequestMapping("/session")
-public class SessionController {
+@RequestMapping("/")
+public class SessionController implements SessionApi {
 
     @Autowired
     private SessionService sessionService;
+//
+//    @Override
+//    public ResponseEntity<SessionState> checkSession(String sessionId, String secret) {
+//        // TODO implement this
+//        return null;
+//    }
 
+//    @Override
+//    @RequestMapping(value = "/{clientId}",
+//            produces = "application/json",
+//            consumes = "",
+//            method = RequestMethod.GET)
+//    public ResponseEntity<SessionResponse> getNewSession(@PathVariable(value="clientId", required = true) String sessionId, SessionRequest credential) {
+//        return new ResponseEntity<SessionResponse>(sessionService.activateNewSession(credential), HttpStatus.OK);
+//    }
     @RequestMapping(
             method={RequestMethod.GET},
-            value = {"/{sessionId}/secret/{secret}"},
+            value = {"/session/{sessionId}/token"},
             produces = {"application/json"}
     )
     @ResponseStatus(HttpStatus.OK)
-    public SessionState checkSession(@PathVariable(value="sessionId", required = true) String sessionId,
-                                     @PathVariable(value="secret", required = true) String secret){
+    public ResponseEntity<SessionState> checkSession(@PathVariable(value="sessionId", required = true) String sessionId,
+                                                     @NotNull @Valid @RequestParam(value = "secret", required = true) String secret){
         //TODO remove this mock and implement real shit
         SessionState mock = new SessionState();
-        mock.setStatus(SessionStatus.ACTIVE);
-        return mock;
+//        mock.setStatus(SessionStatus.ACTIVE.to);
+        return null;
     }
 
     @RequestMapping(
             method={RequestMethod.POST},
-            value = "",
+            value = "/session/clientId/{clientId}",
             consumes = {"application/json"},
             produces = {"application/json"}
     )
     @ResponseStatus(HttpStatus.OK)
-    public SessionResponse activateSession(@RequestBody @Valid SessionRequest request) {
-        //TODO : set cookie in header
-        return sessionService.activateNewSession(request);
+    public ResponseEntity<SessionResponse> getNewSession(@PathVariable(value="clientId", required = true) String sessionId,
+                                                         @RequestBody @Valid SessionRequest request) {
+        if(StringUtils.isEmpty(sessionId) || !sessionId.equals(request.getClientId())){
+            return new ResponseEntity<>(new SessionResponse().sessionId("").secrete(""), HttpStatus.BAD_REQUEST);
+        }
+        return new ResponseEntity<>(sessionService.activateNewSession(request), HttpStatus.OK);
     }
 }
