# src/main/swagger/swagger.yaml
@@ -9,7 +9,7 @@ schemes:
   - http
   - https
 paths:
-  '/session/{sessionId}/secret/{secret}':
+  '/session/{sessionId}/token?secret={secret}':
     get:
       tags:
         - Check if session is active
@@ -24,7 +24,7 @@ paths:
           required: true
           type: string
           description: The id of session to check
-        - in: path
+        - in: query
           name: secret
           required: true
           type: string
@@ -41,7 +41,7 @@ paths:
         '400':
           description: Bad Request
           schema:
-            $ref: '#/definitions/Exception'
+            $ref: '#/definitions/BadRequestException'
         '404':
           description: Not Found
           schema:
@@ -51,17 +51,22 @@ paths:
           schema:
             $ref: '#/definitions/Exception'
 
-  '/session':
+  '/session/clientId/{clientId}':
     post:
       tags:
         - Activate new session
-      operationId: ActivateNewSession
+      operationId: GetNewSession
       summary: Activate new session
       consumes:
         - application/json
       produces:
         - application/json
       parameters:
+        - in: path
+          name: sessionId
+          required: true
+          type: string
+          description: The id of session to check
         - in: body
           name: Credential
           required: true
@@ -79,7 +84,7 @@ paths:
         '400':
           description: Bad Request
           schema:
-            $ref: '#/definitions/Exception'
+            $ref: '#/definitions/BadRequestException'
         '404':
           description: Not Found
           schema:
@@ -117,12 +122,26 @@ definitions:
       - EXPIRED
       - INVALID
       - ACTIVE
+  BadRequestException:
+    type: object
+    properties:
+      message:
+        type: integer
+      errorCode:
+        type: string
+        readOnly: false
+    required:
+      - message
+      - errorCode
   Exception:
     type: object
     properties:
       message:
-        type: string
-        readOnly: true
+        type: integer
       errorCode:
         type: string
-        readOnly: true
+        readOnly: false
+    required:
+      - message
+      - errorCode
+
